--- a/templates/upload.html
+++ b/templates/upload.html
@@ -202,7 +202,7 @@
     </a>
 
     <a href="{{ url_for('add_product') }}">
-      <button class="admin-tab {{ 'active' if active_page=='upload' else '' }}">Product Images</button>
+      <button class="admin-tab {{ 'active' if active_page=='upload' else '' }}">ADD PRODUCTS</button>
     </a>
 
     <a href="{{ url_for('admin_analytics') }}">
