--- a/templates/landing.html
+++ b/templates/landing.html
@@ -710,7 +710,7 @@ body {
 
 <header class="snitch-navbar">
   <div class="snitch-menu-icon" onclick="toggleMenu()">☰</div>
-  <div class="snitch-logo"><a href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='4.png') }}" class="logo-img" alt="Logo"><span class="site-name">Claufe.</span></a></div>
+  <div class="snitch-logo"><a href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='4.png') }}" class="logo-img" alt="Logo"><span class="site-name"></span></a></div>
 
   <div class="snitch-nav-right">
     <div class="snitch-search">
