--- a/templates/landing.html
+++ b/templates/landing.html
@@ -724,6 +724,7 @@ body {
       {% endif %}
             
             <a href="{{ url_for('cart') }}" title="Cart">Cart</a>
+            <a href="{{ url_for('contact') }}" title="Contact">Contact</a>
     </div>
   </div>
 </header>
