--- a/templates/landing.html
+++ b/templates/landing.html
@@ -836,6 +836,7 @@ function toggleMenu() {
             <h4>Quick Links</h4>
             <a href="{{ url_for('landing') }}">Home</a>
             <a href="{{ url_for('cart') }}">Cart</a>
+            <a href="{{ url_for('contact') }}" title="Contact">Contact</a>
 
         </div>
 
